crates/yokectl/tests/snapshots/help_snapshots__help_text_snapshots@push.snap
---
source: crates/yokectl/tests/help_snapshots.rs
expression: stdout
---
Copy a local file to the volume

Usage: yokectl push [OPTIONS] <SRC> [NAME]

Arguments:
  <SRC>   Source file path
  [NAME]  Destination name on the volume (defaults to source stem)

Options:
      --fake-volume <FAKE_VOLUME>  Use a directory as a fake volume backend instead of the platform device
      --validate                   Parse and validate before writing
      --json                       Emit machine-readable JSON on stdout (NDJSON for watch)
  -v, --verbose...                 Increase tracing verbosity on stderr; repeat (-vv reveals info, -vvv debug)
      --no-color                   Disable ANSI styling (NO_COLOR=1 or non-TTY stdout also disable)
  -h, --help                       Print help
