crates/yokectl/tests/snapshots/help_snapshots__help_text_snapshots@set_modifier.snap
---
source: crates/yokectl/tests/help_snapshots.rs
expression: stdout
---
Set the modifier on an existing binding in a sub-profile

Usage: yokectl set-modifier [OPTIONS] <TARGET> <SUB_PROFILE> <INPUT> <MODIFIER>

Arguments:
  <TARGET>       Profile name, file path, or '-' for stdin
  <SUB_PROFILE>  Sub-profile name
  <INPUT>        Input phrase whose binding to modify
  <MODIFIER>     Modifier phrase, e.g. "delay_on 250" (validated against catalog::modifiers)

Options:
      --fake-volume <FAKE_VOLUME>  Use a directory as a fake volume backend instead of the platform device
      --json                       Emit machine-readable JSON on stdout (NDJSON for watch)
  -v, --verbose...                 Increase tracing verbosity on stderr; repeat (-vv reveals info, -vvv debug)
      --no-color                   Disable ANSI styling (NO_COLOR=1 or non-TTY stdout also disable)
  -h, --help                       Print help
