crates/yokectl/tests/snapshots/help_snapshots__help_text_snapshots@show.snap
---
source: crates/yokectl/tests/help_snapshots.rs
expression: stdout
---
Pretty-print the parsed structure of a profile

Usage: yokectl show [OPTIONS] <TARGET>

Arguments:
  <TARGET>  Profile name, file path, or '-' for stdin

Options:
      --fake-volume <FAKE_VOLUME>  Use a directory as a fake volume backend instead of the platform device
      --raw                        Skip parsing and emit the bytes verbatim
      --json                       Emit machine-readable JSON on stdout (NDJSON for watch)
  -v, --verbose...                 Increase tracing verbosity on stderr; repeat (-vv reveals info, -vvv debug)
      --no-color                   Disable ANSI styling (NO_COLOR=1 or non-TTY stdout also disable)
  -h, --help                       Print help
