crates/yokectl/tests/snapshots/help_snapshots__help_text_snapshots@subprofile.snap
---
source: crates/yokectl/tests/help_snapshots.rs
expression: stdout
---
Manage sub-profiles (add, delete, rename, clone)

Usage: yokectl subprofile [OPTIONS] <COMMAND>

Commands:
  add     Add a sub-profile
  delete  Delete a sub-profile (errors on the last remaining one)
  rename  Rename a sub-profile (header only)
  clone   Duplicate a sub-profile under a new name
  help    Print this message or the help of the given subcommand(s)

Options:
      --fake-volume <FAKE_VOLUME>  Use a directory as a fake volume backend instead of the platform device
      --json                       Emit machine-readable JSON on stdout (NDJSON for watch)
  -v, --verbose...                 Increase tracing verbosity on stderr; repeat (-vv reveals info, -vvv debug)
      --no-color                   Disable ANSI styling (NO_COLOR=1 or non-TTY stdout also disable)
  -h, --help                       Print help
