crates/yokectl/tests/snapshots/help_snapshots__help_text_snapshots@subprofile_add.snap
---
source: crates/yokectl/tests/help_snapshots.rs
expression: stdout
---
Add a sub-profile

Usage: yokectl subprofile add [OPTIONS] --mode <MODE> --channel <CHANNEL> <TARGET> <NAME>

Arguments:
  <TARGET>  Profile name, file path, or '-' for stdin
  <NAME>    Sub-profile name

Options:
      --fake-volume <FAKE_VOLUME>  Use a directory as a fake volume backend instead of the platform device
      --mode <MODE>                SubProfileMode value (validated against catalog::modes)
      --channel <CHANNEL>          Channel value (validated against catalog::channels)
      --json                       Emit machine-readable JSON on stdout (NDJSON for watch)
      --sub-mode <SUB_MODE>        Optional sub-mode label
  -v, --verbose...                 Increase tracing verbosity on stderr; repeat (-vv reveals info, -vvv debug)
      --no-color                   Disable ANSI styling (NO_COLOR=1 or non-TTY stdout also disable)
  -h, --help                       Print help
